#2072: add unit test for caching signal enrichment with pre-defined extra fields